# markdown-annotator

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/markdown-annotator/: index.html  package.json  tsconfig.json  vite.config.ts
apps/markdown-annotator/.storybook/: main.ts
apps/markdown-annotator/src/: index.css  main.tsx
apps/markdown-annotator/src-tauri/: Cargo.toml  tauri.conf.json
apps/markdown-annotator/src-tauri/capabilities/: default.json
apps/markdown-annotator/src-tauri/icons/: README.md  icon.icns
apps/markdown-annotator/src-tauri/permissions/: read-markdown-file.toml
apps/markdown-annotator/src-tauri/src/: cli_launcher.rs  lib.rs  main.rs
apps/markdown-annotator/src-tauri/src/application/: document_service.rs  mod.rs
apps/markdown-annotator/src-tauri/src/domain/: document.rs
apps/markdown-annotator/src-tauri/src/inbound/: tauri_commands.rs
apps/markdown-annotator/src-tauri/src/infrastructure/: fs_document_reader.rs  mod.rs
apps/markdown-annotator/src/app/: App.tsx
docs/: annotation-architecture.md  cli-open-markdown-plan.md  multi-window-support-plan.md  multi-window-support-slides.html  tauri-native-dual-pane-investigation.md  tauri-native-window-management.md
docs/plannotator/: 01-overview.md  02-pipeline.md  03-block-parsing-and-rendering.md  04-annotation-system.md  05-output-format.md  06-libraries.md  07-notable-points.md  README.md
examples/: agent-review-plan.md  personal-notes-shopping-list.md  product-requirements.md  technical-design.md
(+17 files in other folders)
