[package]
name = "markdown-annotator"
version = "0.1.0"
description = "Markdown annotation desktop app"
authors = ["you"]
edition = "2024"

[lib]
name = "markdown_annotator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
