[package]
name = "markdown-annotator"
version = "0.1.0"
description = "Markdown annotation desktop app"
authors = ["you"]
edition = "2024"

[lib]
name = "markdown_annotator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ma"
path = "src/bin/ma.rs"

[[bin]]
name = "ma-dev"
path = "src/bin/ma-dev.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
percent-encoding = "2"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSWindow"] }
